--- a/ModelSelection/modelFeatureSelection.ipynb
+++ b/ModelSelection/modelFeatureSelection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9zffxE9W7rWX9gucfW+aK",
+      "authorship_tag": "ABX9TyPU0GRJVmv49dbAFmHtZNC3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/yousef-taheri/Projects/blob/master/ModelSelection/modelFeatureSelection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Some techniques of feature selection."
+      ],
+      "metadata": {
+        "id": "Lye60S9aqh76"
+      }
     },
     {
       "cell_type": "code",
